openshift-project1-basic-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  labels:
    app: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spe:
      containers:
      -  name: nginx
         image: nginx:latest
         ports:
         - containerPort: 80
         valueFrom:
           configMapKeyRef:
             name: nginx-config
             key: APP_MESSAGE
